--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>steg</title><link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1>自己紹介</h1>
-    <a>田中　雅人</a>
-    
+    <div class="top">
+      <h1>steg道場</h1>
+    </div>
+    <h2>自己紹介</h2>
+    <div class="main">
+      <img src="IMG_8852.png"width="300" height="300">
+      <p>田中　雅人</p>
+    </div>
+
+
+
   </body>
 </html>
