--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>steg</title><link rel="stylesheet" href="stylesheet.css">
+    <title>steg</title>
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <div class="top">
@@ -13,8 +14,5 @@
       <img src="IMG_8852.png"width="300" height="300">
       <p>田中　雅人</p>
     </div>
-
-
-
   </body>
 </html>
