--- a/lv3.html
+++ b/lv3.html
@@ -3,19 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>steg lv3</title>
+    <link rel="stylesheet" href="lv4-2.css">
   </head>
   <body>
+    <header>
+      <p>steg道場　Lv4</p>
+    </header>
     <div class="main">
+      <p>数値を入力して下さい</p>
       <label for="textForm1"></label>
       <input type="text" id="x">
-      <label for="textForm2">+</label>
+      <label for="textForm2">
+        <a class="puls">+</<a>
+      </label>
       <input type="text" id="y">
       <button id="button">=</button>
       <label for="answer"></label>
       <input type="text" id="answer">
     </div>
   </body>
-
 
 <script>
 
