--- a/lv6.html
+++ b/lv6.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <title>steg</title>
     <link rel="stylesheet" href="lv6.css">
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="lv6.js"></script>
   </head>
   <body>
     <header>
       <p>steg道場　Lv6</p>
     </header>
-    <div class = "main">
+    <div class="main">
       <h2>自己紹介</h2>
       <img src="IMG_8852.png"width="300" height="300">
       <p>田中　雅人</p>
